RESOLVED FIXED134660
[iOS][WK2] The tap highlight ID is not invalidated when a long press ends
https://bugs.webkit.org/show_bug.cgi?id=134660
Summary [iOS][WK2] The tap highlight ID is not invalidated when a long press ends
Benjamin Poulain
Reported 2014-07-05 19:49:35 PDT
[iOS][WK2] The tap highlight ID is not invalidated when a long press ends
Attachments
Patch (2.13 KB, patch)
2014-07-05 19:55 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2014-07-05 19:55:12 PDT
Darin Adler
Comment 2 2014-07-06 17:17:55 PDT
Comment on attachment 234452 [details] Patch OK to check this in. I didn’t study the logic carefully enough, so you might want someone else to go through it.
Benjamin Poulain
Comment 3 2014-07-06 23:27:00 PDT
Comment on attachment 234452 [details] Patch Clearing flags on attachment: 234452 Committed r170840: <http://trac.webkit.org/changeset/170840>
Benjamin Poulain
Comment 4 2014-07-06 23:27:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.