[iOS][WK2] The tap highlight ID is not invalidated when a long press ends https://bugs.webkit.org/show_bug.cgi?id=134660

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-07-06
Reviewed by Darin Adler.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _cancelInteraction]):
(-[WKContentView _finishInteraction]):
(cancelPotentialTapIfNecessary):
I messed that up in r170600. I only accounted for the web process being too fast.

If the web process is too slow, _cancelInteraction or _finishInteraction happen before
_didGetTapHighlightForRequest:, and we also need to nuke the tap highlight.


Canonical link: https://commits.webkit.org/152641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170840 268f45cc-cd09-0410-ab3c-d52691b4dbfc